--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Life-and-Perambulations-of-a-Mouse_1904
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Kilner, Dorothy
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/746
     wikipedia: http://en.wikipedia.org/wiki/Dorothy_Kilner
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1904#The-Life-and-Perambulations-of-a-Mouse
 gutenberg_issued: '1999-09-01'
 gutenberg_type: Text
 identifiers:
